# vtable-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs
tests/: test_codegen.rs
vtable_proc_macros/: Cargo.toml
vtable_proc_macros/src/: lib.rs
