[workspace]
members = ["proc_macros"]

[workspace.package]
edition = "2021"
authors = ["William Tremblay <tremwil@users.noreply.github.com>"]
keywords = ["vtable", "gamehacking", "cpp", "ffi"]
categories = ["development-tools::ffi", "no-std::no-alloc"]
license = "MIT"
repository = "https://github.com/tremwil/vtable-rs"

[package]
name = "vtable-rs"
version = "0.1.4"
description = "Set of traits and macros to help dealing with C++ virtual method FFI"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vtable-rs-proc-macros = { path = "proc_macros", version = "0.1.1" }