[package]
name = "vtable-rs-proc-macros"
version = "0.1.0"
description = "Proc macro implementation for the vtable-rs crate"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"